gerado doc para criar um produto e ajustado nome do type do dto para CreateProductInput
