# 9-apis/internal/dto/dto.go
@@ -1,6 +1,6 @@
 package dto
 
-type CreateProduct struct {
+type CreateProductInput struct {
 	Name  string  `json:"name"`
 	Price float64 `json:"price"`
 }
