# 9-apis/internal/infa/webserver/handlers/product_handlers.go
@@ -22,8 +22,19 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	}
 }
 
+// Create Product godoc
+// @Summary      Create product
+// @Description  Create product
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        request   body   dto.CreateProductInput  true  "product request"
+// @Success      201
+// @Failure      500  {object}  Error
+// @Router       /products [post]
+// @Security     ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
-	var product dto.CreateProduct
+	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product) //decodifica e salva no product
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
